--- a/yrityksille.html
+++ b/yrityksille.html
@@ -7,7 +7,7 @@
 <body>
     <div class="banner2">
         <div class="navbar">
-            <img src="logo.jpg" class="logo">
+            <img src="logo.png" class="logo">
             <ul>
                 <li><a href="index.html">Etusivu</a></li>
                 <li><a href="yrityksille.html">Yrityksille</a></li>
@@ -39,7 +39,7 @@
         <ol>
             <li>Y-tunnus: 3103498-3</li>
             <li>Puhelin: 045 209 5830</li>
-            <li>E-mail: narrowroute@gmail.com</li>
+            <li>Sähköposti: narrowroute@gmail.com</li>
         </ol>
     </div>
 </div>
