--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <div class="banner">
         <div class="navbar">
-            <img src="logo.jpg" class="logo">
+            <img src="logo.png" class="logo">
             <ul>
                 <li><a href="index.html">Etusivu</a></li>
                 <li><a href="yrityksille.html">Yrityksille</a></li>
@@ -15,8 +15,8 @@
         </div>
 
         <div class="content">
-            <h1>Narrow Route</h1><h3>
-            <p>Liikennöintiä, Kuorma-auton vuokrausta sekä laadukasta palvelua muuttoon, tai tavaran toimitukseen.</p></h3>
+            <h2>Liikennöintiä, kuorma-auton vuokrausta sekä tavaran kuljetusta</h2><h3>
+            <p>Me viemme tavarasi perille turvallisesti. Ota yhteyttä alla olevaan sähköpostiin tai puhelimitse.</p></h3>
             <div>
                 <a href="yrityksille.html">
                 <button type="button"><span></span>Yrityksille</button>
@@ -41,7 +41,7 @@
             <ol>
                 <li>Y-tunnus: 3103498-3</li>
                 <li>Puhelin: 045 209 5830</li>
-                <li>E-mail: narrowroute@gmail.com</li>
+                <li>Sähköposti: narrowroute@gmail.com</li>
             </ol>
         </div>
     </div>
