--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
         </div>
 
         <div class="content">
-            <h2>Liikennöintiä, kuorma-auton vuokrausta sekä tavaran kuljetusta</h2><h3>
-            <p>Me viemme tavarasi perille turvallisesti. Ota yhteyttä alla olevaan sähköpostiin tai puhelimitse.</p></h3>
+            <h2>Liikennöintiä, kuorma-auton vuokrausta sekä tavaran kuljetusta</h2>
+            <h3><p>Olemme Suomalainen yritys ja hoidamme jokaisen toimeksiannon tunnollisesti loppuun asti.</p></h3>
+            <h3><p>Ota yhteyttä alla olevaan sähköpostiin tai puhelimitse.</p></h3>
             <div>
                 <a href="yrityksille.html">
                 <button type="button"><span></span>Yrityksille</button>
