--- a/yksityishenkilot.html
+++ b/yksityishenkilot.html
@@ -39,7 +39,7 @@
         <ol>
             <li>Y-tunnus: 3103498-3</li>
             <li>Puhelin: 045 209 5830</li>
-            <li>Sähköposti: narrowroute@gmail.com</li>
+            <li>Sähköposti: <a href="mailto:narrowroute@gmail.com" style="color:white">narrowroute@gmail.com</a></li>
         </ol>
     </div>
 </div>
