--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <br>
             <ol>
                 <li>Y-tunnus: 3103498-3</li>
-                <li>Puhelin: 045 209 5830</li>
+                <li>Puhelin (Joona Kuivalainen): <a href="tel:045 209 5830" style="color:white">045 209 5830</a></li>
                 <li>Sähköposti: <a href="mailto:narrowroute@gmail.com" style="color:white">narrowroute@gmail.com</a></li>
             </ol>
         </div>
